[workspace]
members = ["projects/services/kubestro-core/backend/*"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
dotenvy = { version = "0.15.7" }
sea-orm = { version = "1.1.4", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "with-uuid",
  "with-chrono",
] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
validator = { version = "0.20.0", features = ["derive"] }

# testing dependencies
mockall = "0.13.1"
fake = { version = "3.1.0", features = ["derive"] }
