[package]
name = "kubestro-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8.1"
dotenvy = { version = "0.15.7" }
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "timeout"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
validator = "0.20.0"
