[package]
name = "kubestro-core-infra"
version = "0.1.0"
edition = "2021"

[dependencies]
# data transformation & manipulation
serde.workspace = true
argon2 = "0.5.3"
chrono.workspace = true
passwords = "3.1.16"
validator.workspace = true

# error handling
thiserror.workspace = true

# database
sea-orm.workspace = true

# logging
tracing.workspace = true

# sub-projects
kubestro-core-domain = { path = "../domain" }

[lib]
name = "kubestro_core_infra"
