[package]
name = "kubestro-core-infra"
version = "0.1.0"
edition = "2021"

[dependencies]
# data transformation & manipulation
serde.workspace = true
argon2 = "0.5.3"
chrono.workspace = true
passwords = "3.1.16"
validator.workspace = true

# security
openidconnect = { version = "4.0.0", features = ["reqwest"] }

# helpers
async-trait.workspace = true
futures = "0.3.31"

# error handling
thiserror.workspace = true

# database
sea-orm.workspace = true

# logging
tracing.workspace = true

# sub-projects
kubestro-core-domain = { path = "../domain" }

# kubernetes
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }

[lib]
name = "kubestro_core_infra"
